--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "json-loader": "^0.5.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-particles-js": "^2.7.1",
     "react-scripts": "3.3.0",
     "react-spring": "^8.0.27",
     "react-swipeable-views": "^0.13.3",
